Release 0.5 (in development)
============================

New features added
------------------

* `SerializingHTMLBuilder` was added as new abstract builder that can
  be subclassed to serialize build HTML in a specific format.  The
  `PickleHTMLBuilder` is a concrete subclass of it that uses pickle as
  serialization implementation.

* `JSONHTMLBuilder` was added that similarily to `PickleHTMLBuilder`
  dumps the generated HTML into JSON files for further processing.

* The `automodule` directive now supports the ``synopsis``,
  ``deprecated`` and ``platform`` options.

* The HTML builders have two additional attributes now that can be used
  to disable the anchor-link creation after headlines and definition
  links.  EXPERIMENTAL


Release 0.4.1 (Jul 5, 2008)
===========================

* Added sub-/superscript node handling to TextBuilder.

* Label names in references are now case-insensitive, since reST
  label names are always lowercased.

* Fix linkcheck builder crash for malformed URLs.

* Add compatibility for admonitions and docutils 0.5.

* Remove the silly restriction on "rubric" in the LaTeX writer: you
  can now write arbitrary "rubric" directives, and only those with
  a title of "Footnotes" will be ignored.

* Copy the HTML logo to the output ``_static`` directory.

* Fix LaTeX code for modules with underscores in names and platforms.

* Fix a crash with nonlocal image URIs.

* Allow the usage of :noindex: in ``automodule`` directives, as
  documented.

* Fix the ``delete()`` docstring processor function in autodoc.

* Fix warning message for nonexisting images.

* Fix JavaScript search in Internet Explorer.


Release 0.4 (Jun 23, 2008)
==========================

New features added
------------------

* ``tocdepth`` can be given as a file-wide metadata entry, and
  specifies the maximum depth of a TOC of this file.

* The new config value `default_role` can be used to select the
  default role for all documents.
