@@ -84,7 +84,10 @@ setup(
         'console_scripts': [
             'sphinx-build = sphinx:main',
             'sphinx-quickstart = sphinx.quickstart:main'
-        ]
+        ],
+        'distutils.commands': [
+            'build_sphinx = sphinx.setup_command:BuildDoc',
+        ],
     },
     install_requires=requires,
 )
